# Readium

./: .gitignore  .pre-commit-config.yaml  README.md  pr.sh  pyproject.toml  salida
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: publish.yml  test.yml
src/readium/: __init__.py  cli.py  config.py  core.py
tests/: test_basic.py  test_exclude_dir.py  test_extension_exclusion.py  test_gitignore.py  test_readium.py  test_token_tree.py  test_tokens_cli.py  test_url_handling.py
tests/unit/: test_cli.py
tests/unit/utils/: test_error_handling.py
