[project]
name = "readium"
version = "0.1.0"
description = "A tool to extract and analyze documentation from repositories and directories"
authors = [
    {name = "Pablo Toledo",email = "pablotoledo@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click (>=8.1.8,<9.0.0)",
    "rich (>=13.9.4,<14.0.0)",
    "black (>=24.10.0,<25.0.0)",
    "isort (>=5.13.2,<6.0.0)",
    "markitdown (>=0.0.1a3,<0.0.2)"
]

[project.scripts]
readium = "readium.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"