[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "readium"
version = "0.1.2"
description = "A tool to extract and analyze documentation from repositories and directories"
authors = ["Pablo Toledo <pablotoledo@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "readium", from = "src"}]
repository = "https://github.com/yourusername/readium.git"
homepage = "https://github.com/yourusername/readium"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
]

[tool.poetry.dependencies]
python = ">=3.10"
click = ">=8.1.8,<9.0.0"
rich = ">=13.9.4,<14.0.0"
markitdown = ">=0.0.1a3,<0.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-mock = "*"
mypy = "*"
black = ">=24.10.0,<25.0.0"
isort = ">=5.12.0,<6.0.0"
pre-commit = "*"
hatch = "*"
pypdf = ">=3.0.1,<4.0.0"

[tool.poetry.scripts]
readium = "readium.cli:main"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
